--- a/_config.yml
+++ b/_config.yml
@@ -19,16 +19,13 @@
 # in the templates via {{ site.myvariable }}.
 
 title: XavierCS
-email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Technology journal and development log for the Effect game engine.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://xaviercs.com" # the base hostname & protocol for your site, e.g. http://example.com
-minima:
-  skin: dark
 github_username:  XavierCS-dev
+
+show_excerpts: true
 
 # Build settings
 
