--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ show_excerpts: true
 # theme: minima
 remote_theme: jekyll/minima
 minima:
-  skin: dark
+  skin: auto
 plugins:
   - jekyll-remote-theme
   - jekyll-feed
